[package]
name = "dbp-brewer-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-once-cell = "0.5.3"
async-recursion = "1.0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
dbp_schema = { git = "https://github.com/exdata-inc/dbp-schema.git", rev = "865b9fb836a518eb0e49502bab5d41e054485421"}
env_logger = "0.10.0"
json-ld-utils = { git = "https://github.com/exdata-inc/dbp-json-ld-utils.git", rev = "80d39e5b89702c4dd227f0547acf943401433b82"}
log = "0.4.20"
once_cell = "1.18.0"
prost = "0.12.1"
prost-helper = "0.7.0"
prost-types = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.11.1"

[build-dependencies]
prost-serde = "0.3"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
